# tainix

./: .gitignore  Greenoid-3-Une-autre-realite.html  challenge-GOT_1.js  challenge-GREENOID_3.js  challenge.html  file.html  game.js  go.mod  main.go  note.md  test.js  vegeta.html
AVENGERS/: AVENGERS_1.js
BANK/: BANK_1.js
BATMAN/: BATMAN_1.js
CARS/: CARS_1.js
CODE/: CODE_LANTA.js
CODEMIND/: CODEMIND_1.js  CODEMIND_2.js
COLLECTION/: test.js
CRYPTO/: CRYPTO_4.js
DBZ/: DBZ_1.js
DETECTIVE/: DETECTIVE_1.js
DIGITALART/: DIGITALART_3.js
EXPLORER/: EXPLORER_1.js  EXPLORER_3.js
FOOTBALL/: FOOTBALL_1.js
FUTURE/: FUTURE.js
GEOMETRY/: GEOMETRY_1.js
GREENOID/: GREENOID_2.js  GREENOID_3.js  GREENOID_4.js  GREENOID_7.js  GREENOID_8.js
HARRY/: HARRY_POTTER_2.js
INVASION/: INVASION_0.js
LOST/: LOST_1.js
MARIO/: MARIO_1.js
MONSTERS/: MONSTERS_1.js
MUSIC/: MUSIC_1.js
NOEL/: NOEL_2023_2.js
OLYMPIC/: OLYMPIC_3.js
PAINT/: PAINT.js
POKEMON/: POKEMON_1.js  (+1 more)
tainix-cli/: .env.example  Cargo.toml  flatten.md  todo.md
tainix-cli/challenges/BANK/: BANK_1.ts
tainix-cli/challenges/BANK_1/: BANK_1.ts
tainix-cli/challenges/DETECTIVE/: DETECTIVE.ts
tainix-cli/challenges/SHELTER/: SHELTER_1.ts  SHELTER_2.ts
tainix-cli/src/: cli.rs  config.rs  error.rs  main.rs  scaffolding.rs  templating.rs  vscode.rs
tainix-cli/src/commands/: generate.rs  js.rs  mod.rs  submit.rs  test.rs
tainix-cli/src/tainix/: client.rs  models.rs  parser.rs
tainix-cli/src/templates/: challenge.tera.ts  challenge.ts
tainix-cli/tainix-api-analysis/: game.js  notes.md
(+109 files in other folders)
