[package]
name = "tainix-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
dotenvy = "0.15.7"
lazy_static = "1.5.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json"] }
scraper = "0.24.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tera = "1.20.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
